# portfolio

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.prod.yml  compose.yml  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: Cargo.toml  Dockerfile
apps/backend/migrations/2025-03-16-153540_create_sessions/: up.sql
apps/backend/migrations/2025-03-16-184656_create_whiteboards/: down.sql
apps/backend/migrations/2025-03-17-025743_whiteboard_events/: down.sql  up.sql
apps/backend/src/: db.rs  lib.rs  main.rs  run_app.rs  schema.rs
apps/backend/src/app/: mod.rs
apps/backend/src/app/app_router/: mod.rs
apps/backend/src/app/app_router/route_handlers/: register.rs  root.rs  web_socket.rs  (+4 more)
apps/backend/src/database/: mod.rs
apps/backend/src/handlers/: root.rs  websocket.rs
apps/backend/src/models/: session.rs  user.rs  whiteboard.rs  whiteboard_event.rs
apps/backend/src/web_socket_client_list/: mod.rs
apps/backend/src/websocket_client_list/: mod.rs
apps/backend/src/websocket_clients/: mod.rs
apps/vfx-renderer/: Cargo.toml  Dockerfile  Dockerfile.prod  README.md  build.sh
apps/vfx-renderer/src/: lib.rs  shader_loader.rs
apps/vfx-renderer/src/shaders/: bloom.glsl  dot_matrix.glsl  fragment.glsl  horizontal_distortion.glsl  random.glsl  scanline.glsl  tape_noise.glsl  tracking_jitter.glsl  vertex.glsl  vhs_noise.glsl  vignette.glsl
apps/whiteboard-backend/: Cargo.toml  Dockerfile  Dockerfile.prod  README.md
apps/whiteboard-backend/migrations/2025-03-16-184656_create_whiteboards/: up.sql
apps/whiteboard-backend/src/: schema.rs
apps/whiteboard-backend/src/app/app_router/: mod.rs
apps/whiteboard-backend/src/models/: whiteboard_event.rs
apps/whiteboard-backend/src/web_socket_client_list/: mod.rs
(+324 files in other folders)
