[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
