[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
